--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -34,6 +34,7 @@
 @import "elements/navbar";
 @import "elements/title";
 @import "elements/subtitle";
+@import "elements/footer";
 
 /*
   Objects Layer
