--- a/_includes/highlighted/posts.html
+++ b/_includes/highlighted/posts.html
@@ -3,21 +3,13 @@
     <h1 class="images-section-title">Highlighted Posts</h1>
     <div class="images-section-group">
       {% for post in site.posts limit:3 %}
-      <a
-          class="images-section-item"
-          href="{{post.link}}"
-          target="blank"
-      >
-          <img
-              class="images-section-image"
-              src="{{post.img}}"
-              alt="{{post.alt}}"
-          >
-
-          <h2 class="images-section-subtitle">
-              {{post.title}}
-          </h2>
-      </a>
+      {%
+        include components/post.html
+          link=post.link
+          img=post.img
+          alt=post.alt
+          title=post.title
+      %}
       {% endfor %}
     </div>
     <div class="has-text-right"><a href="/posts">See more...</a></div>
