--- a/_includes/highlighted/projects.html
+++ b/_includes/highlighted/projects.html
@@ -5,18 +5,13 @@
       {% assign sorted = site.projects | sort: 'date' | reverse %}
 
       {% for project in sorted limit:3 %}
-      <a
-          class="images-section-item"
-          href="{{project.link}}"
-          target="blank"
-      >
-
-          <img
-            class="images-section-image"
-            src="https://github-readme-stats.vercel.app/api/pin/?username={{project.user}}&repo={{project.repo}}&theme=prussian"
-            alt="{{project.alt}}"
-          />
-      </a>
+      {%
+        include components/project.html
+          link=project.link
+          user=project.user
+          repo=project.repo
+          alt=project.alt
+      %}
       {% endfor %}
     </div>
     <div class="has-text-right"><a href="/projects">See more...</a></div>
