--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,33 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>Joaomarcuslf</strong> you can find more about me <a href="https://linktr.ee/joaomarcuslf" target="blank">here</a>.
+      <strong>Joaomarcuslf</strong> you can find more about me <a href="{{site.footer_links.linktr}}" target="blank">here</a>.
     </p>
+
+    <div class="is-hidden" aria-hidden="true">
+      <a href="{{site.footer_links.github}}" target="blank">
+        Github
+      </a>
+
+      <a href="{{site.footer_links.linkedin}}" target="blank">
+        LinkedIn
+      </a>
+
+      <a href="{{site.footer_links.medium}}" target="blank">
+        Medium
+      </a>
+
+      <a href="{{site.footer_links.codewars}}" target="blank">
+        Codewars
+      </a>
+
+      <a href="{{site.footer_links.sourcerer}}" target="blank">
+        Sourcerer
+      </a>
+
+      <a href="{{site.footer_links.twitter}}" target="blank">
+        Twitter
+      </a>
+    </div>
   </div>
 </footer>
