Removed footer_links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,31 +1,31 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>Joaomarcuslf</strong> you can find more about me <a href="{{site.footer_links.linktr}}" target="blank">here</a>.
+      <strong>Joaomarcuslf</strong> you can find more about me <a href="{{site.linktr}}" target="blank">here</a>.
     </p>
 
     <div class="is-hidden" aria-hidden="true">
-      <a href="{{site.footer_links.github}}" target="blank">
+      <a href="{{site.github}}" target="blank">
         Github
       </a>
 
-      <a href="{{site.footer_links.linkedin}}" target="blank">
+      <a href="{{site.linkedin}}" target="blank">
         LinkedIn
       </a>
 
-      <a href="{{site.footer_links.medium}}" target="blank">
+      <a href="{{site.medium}}" target="blank">
         Medium
       </a>
 
-      <a href="{{site.footer_links.codewars}}" target="blank">
+      <a href="{{site.codewars}}" target="blank">
         Codewars
       </a>
 
-      <a href="{{site.footer_links.sourcerer}}" target="blank">
+      <a href="{{site.sourcerer}}" target="blank">
         Sourcerer
       </a>
 
-      <a href="{{site.footer_links.twitter}}" target="blank">
+      <a href="{{site.twitter}}" target="blank">
         Twitter
       </a>
     </div>
