--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -24,6 +24,8 @@
     <meta property="twitter:title" content="{{ site.name }}" />
     {% endif %}
 
+    <meta property="og:image" content="http://joaomarcuslf.com/images/logo-hex.png">
+
     <link rel="canonical" href="{{ site.canonical }}" />
     <meta name="keywords" content="{{ site.keywords }}">
     <meta name="abstract" content="{{ site.abstract }}">
