--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -19,9 +19,14 @@
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
+    {% else %}
+    <meta property="og:title" content="{{ site.name }}" />
+    <meta property="twitter:title" content="{{ site.name }}" />
     {% endif %}
 
     <link rel="canonical" href="{{ site.canonical }}" />
     <meta name="keywords" content="{{ site.keywords }}">
     <meta name="abstract" content="{{ site.abstract }}">
     <meta name="author" content="{{ site.author }}">
+
+    {% raw %}{% seo %}{% endraw %}
