--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -48,6 +48,7 @@
 
 @import "components/images-section";
 @import "components/skills-section";
+@import "components/post-section";
 @import "components/timeline";
 
 /*
