--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>
+      {% if page.title %}
+        {{ page.title }} –
+      {% endif %}
+
+      {{ site.name }} – {{ site.description }}</title>
 
     {% include meta.html %}
 
