--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,25 @@
 ---
 layout: default
 ---
+
+<div class="post">
+    <div class="post-header">
+        <h1 class="title has-text-left">
+            {{page.title}}
+        </h1>
+
+        <h2 class="subtitle has-text-left">
+            {{page.subtitle}}
+        </h2>
+    </div>
+
+    <img
+        class="is-fullwidth post-cover-image"
+        src="{{page.img}}"
+        alt="{{page.alt}}"
+    />
+
+    <div class="post-content content is-medium">
+        {{content}}
+    </div>
+</div>
