--- a/resume/resume.css
+++ b/resume/resume.css
@@ -5,98 +5,163 @@
 }
 
 body {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    font-family: Montserrat, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  font-family: Montserrat, -apple-system, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    "Helvetica", "Arial", sans-serif;
+  color: #152026;
 }
 
-p, h3, h4, h5, h6 {
-    padding: 0;
-    margin: 0;
+p,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
 }
 
-h1, h2 {
-    padding: 0;
-    margin: 0;
-    padding-bottom: .25rem;
+h1,
+h2 {
+  padding: 0;
+  margin: 0;
+  padding-bottom: 0.25rem;
 }
 
 section {
-    padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 .main {
-    max-width: 80vw;
-    min-width: 794px;
-    padding: 10px 20px;
+  max-width: 80vw;
+  min-width: 794px;
+  padding: 10px 20px;
 }
 
 .columns {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.is-row {
+  flex-direction: row;
 }
 
 .is-half {
-    width: 50%;
+  width: 50%;
 }
 
 .pl-1 {
-    padding-left: 1.1rem;
+  padding-left: 1.1rem;
 }
 
 .pl-2 {
-    padding-left: 1.2rem;
+  padding-left: 1.2rem;
+}
+
+.pl-3 {
+  padding-left: 1.3rem;
+}
+
+.pl-4 {
+  padding-left: 1.4rem;
+}
+
+.pl-5 {
+  padding-left: 1.5rem;
 }
 
 .pr-05 {
-    padding-right: .5rem;
+  padding-right: 0.5rem;
 }
 
 .ph-5 {
-    padding: 1.5rem 0;
+  padding: 1.5rem 0;
 }
 
 .underlined {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .capitalized {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 .flex-right {
-    margin-left: 60%;
+  margin-left: 60%;
 }
 
 .job-column {
-    width: calc(50% - .5rem);
+  width: calc(50% - 0.5rem);
 }
 
 .job-column:nth-child(odd) {
-    margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .job-column:nth-child(even) {
-    margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .description-line {
-    padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
 }
 
-@page{
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+.card {
+  padding: 15px 5px;
+}
+
+.card .small {
+  color: #223440;
+  font-size: 12px;
+}
+
+.indent-5 {
+  text-indent: 25px;
+}
+
+.chip.is-soft {
+  background: #5a758c;
+  padding: 10px 15px;
+  border: 1px solid #adc5d940;
+  border-radius: 20px;
+  margin: 10px 5px;
+  display: flex;
+  color: #d2e1ee;
+  justify-content: center;
+}
+
+.chip.is-hard {
+  background: #152026;
+  padding: 10px 15px;
+  border: 1px solid #d2e1ee40;
+  border-radius: 20px;
+  margin: 10px 5px;
+  color: #d2e1ee;
+  display: flex;
+  justify-content: center;
+}
+
+@page {
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+@media print {
+  .experience-section {
+    page-break-before: always;
+  }
 }
