--- a/_includes/components/project.html
+++ b/_includes/components/project.html
@@ -6,7 +6,7 @@
 
     <img
     class="images-section-image"
-    src="https://github-readme-stats.vercel.app/api/pin/?username={{include.user}}&repo={{include.repo}}&theme=prussian"
+    src="https://github-readme-stats.vercel.app/api/pin/?username={{include.user}}&repo={{include.repo}}&theme=material-palenight"
     alt="{{include.alt}}"
     width="250px"
     />
