--- a/_sass/components/timeline.scss
+++ b/_sass/components/timeline.scss
@@ -80,7 +80,7 @@
         border: unset;
 
         .timeline-company-image {
-          background: white;
+          background: $lightest-gray;
           height: 60px;
           width: 60px;
           border-width: 3px;
@@ -93,7 +93,7 @@
         &:hover,
         &.is-active {
           .timeline-company-image {
-            background: white;
+            background: $lightest-gray;
             height: 75px;
             width: 75px;
             border-width: 5px;
@@ -110,7 +110,7 @@
           width: 50px;
 
           .timeline-company-image {
-            background: white;
+            background: $lightest-gray;
             height: 40px;
             width: 40px;
             border-width: 2px;
@@ -120,7 +120,7 @@
           &:hover,
           &.is-active {
             .timeline-company-image {
-              background: white;
+              background: $lightest-gray;
               height: 50px;
               width: 50px;
               border-width: 3px;
@@ -138,7 +138,7 @@
           width: 30px;
 
           .timeline-company-image {
-            background: white;
+            background: $lightest-gray;
             height: 25px;
             width: 25px;
             border-width: 2px;
@@ -148,7 +148,7 @@
           &:hover,
           &.is-active {
             .timeline-company-image {
-              background: white;
+              background: $lightest-gray;
               height: 30px;
               width: 30px;
               border-width: 3px;
@@ -186,7 +186,7 @@
     }
 
     .timeline-company-image {
-      background: white;
+      background: $lightest-gray;
       border-color: $lighter-gray-75;
     }
   }
@@ -206,7 +206,7 @@
     }
 
     .timeline-company-image {
-      background: white;
+      background: $lightest-gray;
       border-color: $darker-gray-75;
     }
   }
