--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -9,6 +9,7 @@
 <meta name="distribution" content="global">
 <meta name="language" content="en,pt">
 <meta name=”robots” content=”index,follow”>
+<meta name=" theme-color" content="#741b47">
 
 {% if page.excerpt %}
 <meta name="description" content="{{ page.excerpt| strip_html }}" />
