--- a/_includes/components/project.html
+++ b/_includes/components/project.html
@@ -2,6 +2,7 @@
     class="images-section-item"
     href="{{include.link}}"
     target="blank"
+    aria-label="This image is a link for the '{{include.alt}}' on Github."
 >
 
     <img
