--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p class="mb-0">
-      Made by <strong>Joaomarcuslf</strong>. <br /> You can find more about me <a href="{{site.linktr}}" target="blank">here</a>.
+      Made by <strong>Joaomarcuslf</strong>. <br /> You can find more about me <a href="{{site.linktr}}" target="blank" aria-label='Link for my linktree page'>in my Linktree</a>.
     </p>
 
     <div class="is-hidden" aria-hidden="true">
