Add mentorship page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
         {{ page.title }} –
       {% endif %}
 
-      {{ site.name }} – {{ site.description }}</title>
+      {{ site.name }}
+    </title>
 
     {% include meta.html %}
 
@@ -37,6 +38,7 @@
                 <a class="navbar-item home-navitem" href="/">Home</a>
                 <a class="navbar-item posts-navitem" href="/posts">Posts</a>
                 <a class="navbar-item projects-navitem" href="/projects">Projects</a>
+                <a class="navbar-item mentorship-navitem" href="/mentorship">Mentorship</a>
                 <a class="navbar-item about-me-navitem" href="/about-me">About Me</a>
             </div>
 
@@ -44,6 +46,7 @@
                 <a class="navbar-item home-navitem" href="/">Home</a>
                 <a class="navbar-item posts-navitem" href="/posts">Posts</a>
                 <a class="navbar-item projects-navitem" href="/projects">Projects</a>
+                <a class="navbar-item mentorship-navitem" href="/mentorship">Mentorship</a>
                 <a class="navbar-item about-me-navitem" href="/about-me">About Me</a>
             </div>
         </div>
