--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -59,6 +59,7 @@
 
 @import "components/images-section";
 @import "components/skills-section";
+@import "components/mentorship-lists-section";
 @import "components/post-section";
 @import "components/timeline";
 
