--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,4 +1,4 @@
-<section class="hero is-{{include.theme}}">
+<section class="hero is-{{include.theme}} {{include.class}}">
   <div class="hero-body">
     <h1 class="title">
       {{include.title}}
