--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -52,6 +52,8 @@
 */
 
 @import "objects/flag-toggle";
+@import "objects/timeline";
+@import "objects/typewriter";
 
 /*
   Components Layer
@@ -61,7 +63,6 @@
 @import "components/skills-section";
 @import "components/mentorship-lists-section";
 @import "components/post-section";
-@import "components/timeline";
 
 /*
   Trumps Layer
