--- a/_includes/job-timeline.html
+++ b/_includes/job-timeline.html
@@ -11,6 +11,20 @@
 
     var description = document.getElementById("timelineDescription");
     description.innerHTML = elm.children[1].innerHTML;
+
+    // Scroll to the element
+
+    var scrollTop = window.pageYOffset || (document.documentElement || document.body.parentNode || document.body).scrollTop
+    var winHeight = window.innerHeight || (document.documentElement || document.body).clientHeight
+
+    var block = 'end';
+
+    if (scrollTop > winHeight / 2) {
+      block = 'start';
+    }
+
+    var element = document.querySelector(".timeline");
+    element.scrollIntoView({ behavior: 'smooth', block: block});
   }
 </script>
 
