--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,6 +10,7 @@
 @import "settings/settings";
 @import "vendors/bulma/bulma.sass";
 @import "settings/reset";
+@import "settings/preload";
 
 /*
   Tools Layer
