--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+
+    {% include preload.html %}
   </head>
 
   <body class="vsc-initialized has-navbar-fixed-top">
