--- a/_sass/objects/hero-with-background.scss
+++ b/_sass/objects/hero-with-background.scss
@@ -45,7 +45,7 @@
       background-size: cover;
 
       .hero-body {
-        background-color: rgba($accent, 0.7);
+        background-color: rgba($quaternary, 0.7);
       }
     }
 
