Added new images

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -53,6 +53,7 @@
 */
 
 @import "objects/flag-toggle";
+@import "objects/hero-with-background";
 @import "objects/timeline";
 @import "objects/typewriter";
 
