--- a/_sass/objects/typewriter.scss
+++ b/_sass/objects/typewriter.scss
@@ -3,26 +3,29 @@
 
 @include for-tablet-landscape-up {
   .typewriter h1 {
-    overflow: hidden;
-    border-right: .15em solid $secondary;
+    position: relative;
+    margin: 2rem auto;
     white-space: nowrap;
-    margin: 0 auto;
-    letter-spacing: .15em;
-    max-width: 100%;
+    overflow: hidden;
+
+    max-width: min-content;
+
+    border-right: .15em solid $secondary;
+
     animation:
-    typing 4.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+    typing 5.5s steps(40, end),
+    blink-caret 1s step-end infinite;
   }
 
   /* The typing effect */
   @keyframes typing {
     from { width: 0 }
-    to { width: 21em; }
+    to { width: 100%; }
   }
 
   /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: $secondary; }
+    35% { border-color: $secondary; }
   }
 }
