--- a/_includes/expanded/projects.html
+++ b/_includes/expanded/projects.html
@@ -1,17 +1,20 @@
-<section class="hero images-section is-dark">
+<section class="hero projects-section is-dark">
   <div class="hero-body">
-    <h2 class="images-section-title">Projects</h2>
+    <h2 class="projects-section-title">Projects</h2>
 
-    <div class="images-section-group">
+    <div class="projects-section-group">
       {% assign sorted = site.projects | sort: 'date' | reverse %}
 
       {% for project in sorted %}
       {%
         include components/project.html
           link=project.link
+          title=project.title
           user=project.user
           repo=project.repo
           alt=project.alt
+          main=project.main
+          techs=project.techs
       %}
       {% endfor %}
     </div>
