--- a/_includes/job-timeline.html
+++ b/_includes/job-timeline.html
@@ -13,18 +13,7 @@
     description.innerHTML = elm.children[1].innerHTML;
 
     // Scroll to the element
-
-    var scrollTop = window.pageYOffset || (document.documentElement || document.body.parentNode || document.body).scrollTop
-    var winHeight = window.innerHeight || (document.documentElement || document.body).clientHeight
-
-    var block = 'end';
-
-    if (scrollTop > winHeight / 2) {
-      block = 'start';
-    }
-
-    var element = document.querySelector(".timeline");
-    element.scrollIntoView({ behavior: 'smooth', block: block});
+    smoothScroll(".timeline");
   }
 </script>
 
