--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -28,4 +28,33 @@
             elm.classList.toggle('is-active');
         }
     });
+
+    function smoothScroll(selector) {
+      var scrollTop = window.pageYOffset || (document.documentElement || document.body.parentNode || document.body).scrollTop
+      var winHeight = window.innerHeight || (document.documentElement || document.body).clientHeight
+
+      var block = 'end';
+
+      if (scrollTop > winHeight / 2) {
+        block = 'start';
+      }
+
+      var element = document.querySelector(selector);
+      element.scrollIntoView({ behavior: 'smooth', block: block});
+    }
+
+    function expandView(target) {
+      var $highlights = document.querySelector("#" + target + " .is-higlights");
+      var $button = document.querySelector("#" + target + " .button.has-icon");
+
+      $button.classList.toggle('is-flipped');
+
+      $highlights.classList.toggle('is-expanded');
+
+      if ($highlights.classList.contains('is-expanded')) {
+        smoothScroll("#" + target + " .button.has-icon");
+      } else {
+        smoothScroll("#" + target);
+      }
+    }
 </script>
