--- a/_sass/objects/hero-with-background.scss
+++ b/_sass/objects/hero-with-background.scss
@@ -7,6 +7,10 @@
     min-height: 65vh;
     display: flex;
 
+    &.is-mini {
+      min-height: 35vh;
+    }
+
     .hero-body {
       display: flex;
       justify-content: center;
