--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,6 @@ layout: compress
 
     {% include analytics.html %}
 
-    {% include scripts.html %}
+    <script src="{{ site.baseurl }}/js/base.js"></script>
   </body>
 </html>
