--- a/_layouts/mentorship.html
+++ b/_layouts/mentorship.html
@@ -5,12 +5,8 @@
 
     {% include meta.html %}
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/mentorship/mentorship.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/mentorship.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   </head>
 
@@ -21,6 +17,6 @@
 
     {% include analytics.html %}
 
-    {% include scripts.html %}
+    <script src="{{ site.baseurl }}/js/base.js"></script>
   </body>
 </html>
