--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -5,11 +5,7 @@
 
     {% include meta.html %}
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resume/resume.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/resume.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   </head>
 
@@ -20,6 +16,6 @@
 
     {% include analytics.html %}
 
-    {% include scripts.html %}
+    <script src="{{ site.baseurl }}/js/base.js"></script>
   </body>
 </html>
