--- a/_layouts/email.html
+++ b/_layouts/email.html
@@ -50,6 +50,6 @@
 
     {% include analytics.html %}
 
-    {% include scripts.html %}
+    <script src="{{ site.baseurl }}/js/base.js"></script>
   </body>
 </html>
