--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -27,7 +27,7 @@
 <meta property="twitter:title" content="{{ site.name }}" />
 {% endif %}
 
-<meta property="og:image" content="http://joaomarcuslf.com/images/logo-hex.png">
+<meta property="og:image" content="http://joaomarcuslf.com/images/logo-hex.webp">
 
 <meta name="keywords" content="{{ site.keywords }}">
 <meta name="abstract" content="{{ site.abstract }}">
