--- a/_includes/highlighted/posts.html
+++ b/_includes/highlighted/posts.html
@@ -17,7 +17,7 @@
       {% endfor %}
     </div>
 
-    <div class="has-text-centered">
+    <div class="has-text-centered" aria-label="Expand Posts">
       <button class="button has-icon is-light is-rounded is-outlined" onclick="expandView('posts')">
         <span class="icon is-large">
           <i class="fas fa-chevron-down"></i>
