--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ layout: compress
     <nav class="navbar is-fixed-top is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <div class="navbar-item">
-                <img src="/images/logo-typo.webp" alt="Logo which is written { @ } JOAOMARCUSLF" height="50" />
+                <img src="/images/logo-typo.webp" alt="Logo which is written { @ } JOAOMARCUSLF" height="50" width="100%" />
             </div>
 
             <button type="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenuTarget">
