--- a/_includes/components/post.html
+++ b/_includes/components/post.html
@@ -14,6 +14,7 @@
         class="images-section-image"
         src="{{include.img}}"
         alt="{{include.alt}}"
+        width="100%" height="auto"
     >
 
     <h2 class="images-section-subtitle">
