--- a/_includes/components/project.html
+++ b/_includes/components/project.html
@@ -10,6 +10,7 @@
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/{{include.main}}/{{include.main}}-original.svg"
           alt="{{include.main}} logo"
+          width="100%" height="auto"
         />
       </p>
     </figure>
