--- a/_includes/components/project.html
+++ b/_includes/components/project.html
@@ -9,6 +9,7 @@
       <p class="image is-64x64">
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/{{include.main}}/{{include.main}}-original.svg"
+          alt="{{include.main}} logo"
         />
       </p>
     </figure>
