--- a/_includes/highlighted/posts.html
+++ b/_includes/highlighted/posts.html
@@ -17,8 +17,8 @@
       {% endfor %}
     </div>
 
-    <div class="has-text-centered" aria-label="Expand Posts">
-      <button class="button has-icon is-light is-rounded is-outlined" onclick="expandView('posts')">
+    <div class="has-text-centered">
+      <button class="button has-icon is-light is-rounded is-outlined" onclick="expandView('posts')" role="button" aria-label="Expand Posts Button">
         <span class="icon is-large">
           <i class="fas fa-chevron-down"></i>
         </span>
