--- a/_includes/highlighted/projects.html
+++ b/_includes/highlighted/projects.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="has-text-centered">
-      <button class="button has-icon is-light is-rounded is-outlined" onclick="expandView('projects')" aria-label="Expand Projects">
+      <button class="button has-icon is-light is-rounded is-outlined" onclick="expandView('projects')" role="button"  aria-label="Expand Projects Button">
         <span class="icon is-large">
           <i class="fas fa-chevron-down"></i>
         </span>
